added skills on main page

--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
                         <p>EXCEL</p>
                         <img src="assets/excel.png" alt="EXCEL Skill" class="skill-image">
                     </div>
+                    <div class="skill-item">
+                        <p>EXCEL</p>
+                        <img src="assets/excel.png" alt="EXCEL Skill" class="skill-image">
+                    </div>
+                    <div class="skill-item">
+                        <p>EXCEL</p>
+                        <img src="assets/excel.png" alt="EXCEL Skill" class="skill-image">
+                    </div>
                 </section>
             </section>
     
