--- a/index.html
+++ b/index.html
@@ -103,20 +103,20 @@
                         <img src="assets/python.png" alt="PYTHON Skill" class="skill-image">
                     </div>
                     <div class="skill-item">
-                        <p>MACHINE LEARNING</p>
-                        <img src="assets/ai.png" alt="MACHINE LEARNING Skill" class="skill-image">
+                        <p>TABLEAU & POWER BI</p>
+                        <img src="assets/powerbi.png" alt="Tableau & Power BI Skill" class="skill-image">
                     </div>
                     <div class="skill-item">
                         <p>EXCEL</p>
                         <img src="assets/excel.png" alt="EXCEL Skill" class="skill-image">
                     </div>
                     <div class="skill-item">
-                        <p>EXCEL</p>
-                        <img src="assets/excel.png" alt="EXCEL Skill" class="skill-image">
+                        <p>SAP</p>
+                        <img src="assets/sap.png" alt="SAP Skill" class="skill-image">
                     </div>
                     <div class="skill-item">
-                        <p>EXCEL</p>
-                        <img src="assets/excel.png" alt="EXCEL Skill" class="skill-image">
+                        <p>IBM</p>
+                        <img src="assets/ibm.png" alt="IBM Skill" class="skill-image">
                     </div>
                 </section>
             </section>
