adding ibm congo

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <img src="assets/sap.png" alt="SAP Skill" class="skill-image">
                     </div>
                     <div class="skill-item">
-                        <p>IBM</p>
+                        <p>IBM CONGO TM1</p>
                         <img src="assets/ibm.png" alt="IBM Skill" class="skill-image">
                     </div>
                 </section>
